--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,2 +1,10 @@
+<h1>My first web page</h1>
+<h2>Written with the guidance of Epicodus</h2>
+
+<br/>
+
+&nbsp;
+
+
 <p>This is my first web page!</p>
 <p>Isn't is nice?</p>
