adds new html my favorite things and an image

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,13 +4,15 @@
     <title>Web Page #1</title>
   </head>
   <body>
-    <h1>My first web page</h1>
-    <h2>Written with the guidance of Epicodus</h2>
+    <h1>My <strong>first web page</strong></h1>
+    <h2>Written with the guidance of <em>Epicodus</em></h2>
 
     <p>This is my first web page!</p>
     <p>Isn't is nice?</p>
+    <p>Check out <a href="http://wwww.epicodus.com/">Epicodus</a> It's a great school for learning web programming!</p>
 
     <p>Here are some things I'm going to learn about coding:</p>
+
     <ul>
       <li>HTML</li>
       <li>CSS</li>
@@ -22,5 +24,7 @@
       <li>cat</li>
       <li>dog</li>
     </ol>
+    <img src="img/An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg" alt="cute cate">
+    <p>Here is a link to my <a href="my-favorite-things.html">favorite things</a>.</p>
   </body>
 </html>
