adds links and photos to webpage

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -11,36 +11,36 @@
     <p>Here are some of my favorite <em>people</em>!</p>
     <ul>
       <li>
-        <a href="http://www.example.com/christopher.html">
+        <a href="https://en.wikipedia.org/wiki/Chris_Rock">
           My brother <strong>Christopher</strong>
-          <img src="img/christopher.jpeg" alt="A photo of Christopher.">
+          <img src="img/download.jpeg" alt="A photo of Christopher.">
         </a>
       </li>
       <li>
         My mom and dad:
         <ul>
           <li>
-            <a href="http://www.example.com/steve.html">
+            <a href="https://www.stevemartin.com/">
               <strong>Steve</strong>
-              <img src="img/steve.jpeg" alt="A photo of Steve.">
+              <img src="img/stevemartin.jpeg" alt="A photo of Steve.">
             </a>
           </li>
           <li>
-            <a href="http://www.example.com/carol.html">
+            <a href="https://www.caroleking.com/official-website-carole-king-songwriter-performer-author">
               <strong>Carol</strong>
-              <img src="img/carol.jpeg" alt="A photo of Carol.">
+              <img src="img/carolking.jpeg" alt="A photo of Carol.">
             </a>
           </li>
         </ul>
       </li>
       <li>
-        <a href="http://www.example.com/jessica.html">
+        <a href="https://jessicasimpson.com/">
           My friend <strong>Jessica</strong>
-          <img src="img/jessica.jpeg" alt="A photo of Jessica.">
+          <img src="img/jessicasimpson.jpeg" alt="A photo of Jessica.">
         </a>
       </li>
       <li>
-        <a href="http://www.example.com/candy.html">
+        <a href="https://www.amazon.com/candy/s?k=candy">
           My friend <strong>Candy</strong>
           <img src="img/candy.jpeg" alt="A photo of Candy.">
         </a>
