--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -11,12 +11,12 @@
     <p>Isn't is nice?</p>
     <p>Check out <a href="http://wwww.epicodus.com/">Epicodus</a> It's a great school for learning web programming!</p>
 
-    <p>Here are some things I'm going to learn about coding:</p>
+    <p>Here are some things I'm going to learn about <strong>coding:</strong></p>
 
     <ul>
       <li>HTML</li>
       <li>CSS</li>
-      <li>JavaScript</li>
+      <li><em>JavaScript</em></li>
       <li>And a lot more!</li>
     </ul>
 
