rename my-first-webpage as index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li>HTML</li>
       <li>CSS</li>
       <li><em>JavaScript</em></li>
-      <li>And a lot more!</li>
+      <li>And a whole lot more!</li>
     </ul>
 
     <ol>
